test/parser/inputs/invalid/sample2.yah
swag numbah is 420
numba be 69